--- a/packages/modules/typescript/package.json
+++ b/packages/modules/typescript/package.json
@@ -17,9 +17,9 @@
     "release": "npm run linting && npm run build && npm publish"
   },
   "dependencies": {
-    "babel-loader": "^8.2.2",
     "ts-loader": "^9.2.5",
     "thread-loader": "^3.0.4",
-    "@webpackon/core": "1.0.0"
+    "@webpackon/core": "1.0.0",
+    "tsconfig-paths-webpack-plugin": "3.5.1"
   }
 }
