--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "tsc": "../node_modules/.bin/tsc",
     "remove-build": "../node_modules/.bin/rimraf lib/*",
     "babel-transform": "../node_modules/.bin/babel lib --out-dir lib",
-    "build": "npm run remove-build && npm run tsc && npm run babel-transform",
-    "lint": "../node_modules/.bin/eslint --fix packages/core/src/**/*.ts",
-    "lint:types": "../node_modules/.bin/tsc --noEmit",
-    "tests": "../node_modules/.bin/jest",
-    "linting": "npm run lint && npm run lint:types && npm run tests",
-    "release": "npm run linting && npm run build && npm publish"
+    "build": "yarn run remove-build && yarn run tsc && yarn run babel-transform",
+    "linting": "yarn run lint:fix && yarn run lint:types && yarn run tests",
+    "release": "yarn run linting && yarn run build && npm publish",
+    "lint:fix": "yarn workspaces run lint:fix",
+    "lint": "eslint --fix --quiet",
+    "lint:types": "tsc --noEmit",
+    "tests": "jest"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
@@ -30,9 +31,10 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jest": "^24.4.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "husky": "^3.0.9",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
+    "simple-git-hooks": "^2.6.1",
+    "lint-staged": "^11.1.2",
     "ts-jest": "^27.0.4",
     "typescript": "^4.3.5"
   }
