--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,12 +26,12 @@
   "scripts": {
     "tsc": "../../node_modules/.bin/tsc",
     "remove-build": "../../node_modules/.bin/rimraf lib/*",
-    "build": "npm run remove-build && npm run tsc",
-    "lint": "eslint --fix .",
+    "build": "yarn run remove-build && yarn run tsc",
+    "lint:fix": "eslint ./src --fix --ext .ts",
     "lint:types": "tsc --noEmit",
     "tests": "jest",
-    "linting": "npm run lint && npm run lint:types && npm run tests",
-    "release": "npm run linting && npm run build && npm publish"
+    "linting": "yarn run lint:fix && yarn run lint:types && yarn run tests",
+    "release": "yarn run linting && yarn run build && npm publish"
   },
   "dependencies": {
     "@types/webpack": "^5.28.0",
