--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,32 +1,17 @@
 {
   "name": "@webpackon/core",
-  "version": "1.0.0",
-  "description": "Webpack 4 config for SPA",
-  "author": "And_tem",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AndTem/webpack-spa-config"
-  },
+  "version": "0.1.0",
+  "description": "Webpackon core",
+  "homepage": "https://github.com/AndTem/webpackon/tree/master/packages/core#Readme",
   "browser": "src/index.ts",
   "types": "src/index.ts",
-  "license": "MIT",
-  "homepage": "https://github.com/AndTem/webpack-spa-config#Readme",
-  "keywords": [
-    "webpack",
-    "webpack 5",
-    "webpack config",
-    "webpack-config",
-    "webpack spa",
-    "webpack compatibility config",
-    "webpack modern config"
-  ],
-  "bugs": {
-    "url": "https://github.com/AndTem/webpack-spa-config/issues"
-  },
   "scripts": {
-    "tsc": "../../node_modules/.bin/tsc",
-    "remove-build": "../../node_modules/.bin/rimraf lib/*",
-    "build": "yarn run remove-build && yarn run tsc",
+    "remove-build": "rimraf lib/*",
+    "prebuild": "yarn run remove-build",
+    "build": "yarn run tsc -p ./tsconfig.json",
+    "postbuild": "yarn run copy-files && yarn run modify-package",
+    "copy-files": "rep-commander copyCommonFiles",
+    "modify-package": "rep-commander modifyPackageJSON",
     "lint:fix": "eslint ./src --fix --ext .ts",
     "lint:types": "tsc --noEmit",
     "tests": "jest",
