--- a/packages/modules/babel/package.json
+++ b/packages/modules/babel/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "@webpackon/babel",
-  "version": "1.0.0",
-  "description": "Webpack 4 config for SPA",
-  "author": "And_tem",
+  "name": "@webpackon/use-babel",
+  "version": "0.1.0",
+  "description": "Webpackon use babel",
+  "homepage": "https://github.com/AndTem/webpackon/tree/master/packages/modules/babel#Readme",
   "browser": "src/index.ts",
   "types": "src/index.ts",
   "scripts": {
-    "tsc": "../../node_modules/.bin/tsc",
-    "remove-build": "../../node_modules/.bin/rimraf lib/*",
-    "babel-transform": "../../node_modules/.bin/babel lib --out-dir lib",
-    "build": "yarn run remove-build && yarn run tsc && yarn run babel-transform",
+    "remove-build": "rimraf lib/*",
+    "prebuild": "yarn run remove-build",
+    "build": "yarn run tsc -p ./tsconfig.json",
+    "postbuild": "yarn run copy-files && yarn run modify-package",
+    "copy-files": "rep-commander copyCommonFiles",
+    "modify-package": "rep-commander modifyPackageJSON",
     "lint:fix": "eslint ./src --fix --ext .ts",
     "lint:types": "tsc --noEmit",
     "tests": "jest",
@@ -19,6 +21,6 @@
   "dependencies": {
     "babel-loader": "^8.2.2",
     "thread-loader": "^3.0.4",
-    "@webpackon/core": "1.0.0"
+    "@webpackon/core": "^0.1.0"
   }
 }
