--- a/examples/react-config/package.json
+++ b/examples/react-config/package.json
@@ -3,10 +3,25 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "build": "webpack --mode=production --config webpack.config.js",
+    "dev": "webpack-dev-server --mode=development --config webpack.config.js"
   },
   "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "@types/react": "^17.0.30",
+    "@types/react-dom": "^17.0.9",
     "@webpackon/react-config": "^0.1.0",
     "webpack": "^5.58.2",
-    "webpack-dev-server": "^4.3.1"
+    "webpack-dev-server": "^4.3.1",
+    "webpack-cli": "^4.9.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/plugin-transform-async-to-generator": "7.12.1",
+    "@babel/plugin-transform-runtime": "7.12.1",
+    "@babel/preset-env": "7.12.11",
+    "@babel/preset-react": "7.12.10",
+    "@babel/preset-typescript": "^7.15.0"
   }
 }
