--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "Webpackon",
   "workspaces": [
     "packages/*",
-    "packages/modules/*"
+    "packages/modules/*",
+    "examples/*"
   ],
   "scripts": {
     "lint:fix": "yarn workspaces run lint:fix",
