--- a/packages/base-config/package.json
+++ b/packages/base-config/package.json
@@ -30,6 +30,7 @@
   },
   "peerDependencies": {
     "webpack": "5.x.x",
-    "webpack-dev-server": "4.x.x"
+    "webpack-dev-server": "4.x.x",
+    "webpack-cli": "4.x.x"
   }
 }
