--- a/packages/react-config/package.json
+++ b/packages/react-config/package.json
@@ -31,6 +31,7 @@
   },
   "peerDependencies": {
     "webpack": "5.x.x",
-    "webpack-dev-server": "4.x.x"
+    "webpack-dev-server": "4.x.x",
+    "webpack-cli": "4.x.x"
   }
 }
