remove thread-loader

--- a/examples/react-config/package.json
+++ b/examples/react-config/package.json
@@ -16,17 +16,17 @@
     "webpack": "^5.58.2",
     "webpack-dev-server": "^4.3.1",
     "webpack-cli": "^4.9.1",
-    "@webpackon/react-config": "file:../../packages/react-config/lib",
-    "@webpackon/base-config": "file:../../packages/base-config/lib",
-    "@webpackon/core": "file:../../packages/core/lib",
-    "@webpackon/use-babel": "file:../../packages/modules/babel/lib",
-    "@webpackon/use-typescript": "file:../../packages/modules/typescript/lib",
-    "@webpackon/use-html": "file:../../packages/modules/html/lib",
-    "@webpackon/use-optimization": "file:../../packages/modules/optimization/lib",
-    "@webpackon/use-css": "file:../../packages/modules/css/lib",
-    "@webpackon/use-fonts": "file:../../packages/modules/fonts/lib",
-    "@webpackon/use-images": "file:../../packages/modules/images/lib",
-    "@webpackon/use-dev-server": "file:../../packages/modules/dev-server/lib"
+    "@webpackon/react-config": "*",
+    "@webpackon/base-config": "*",
+    "@webpackon/core": "*",
+    "@webpackon/use-babel": "*",
+    "@webpackon/use-typescript": "*",
+    "@webpackon/use-html": "*",
+    "@webpackon/use-optimization": "*",
+    "@webpackon/use-css": "*",
+    "@webpackon/use-fonts": "*",
+    "@webpackon/use-images": "*",
+    "@webpackon/use-dev-server": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
