--- a/packages/base-config/package.json
+++ b/packages/base-config/package.json
@@ -4,7 +4,8 @@
   "description": "Webpackon base config",
   "homepage": "https://github.com/AndTem/webpackon/tree/master/packages/base-config#Readme",
   "browser": "src/index.ts",
-  "types": "src/index.ts",
+   "types": "src/index.ts",
+   "main": "lib/index.js",
   "scripts": {
     "remove-build": "rimraf lib/*",
     "prebuild": "yarn run remove-build",
@@ -26,6 +27,7 @@
     "@webpackon/use-html": "^0.1.0",
     "@webpackon/use-dev-server": "^0.1.0",
     "@webpackon/use-optimization": "^0.1.0",
+    "@webpackon/use-css": "^0.1.0",
     "@types/webpack": "5.28.0"
   },
   "peerDependencies": {
