--- a/packages/modules/babel/package.json
+++ b/packages/modules/babel/package.json
@@ -4,7 +4,8 @@
   "description": "Webpackon use babel",
   "homepage": "https://github.com/AndTem/webpackon/tree/master/packages/modules/babel#Readme",
   "browser": "src/index.ts",
-  "types": "src/index.ts",
+   "types": "src/index.ts",
+   "main": "lib/index.js",
   "scripts": {
     "remove-build": "rimraf lib/*",
     "prebuild": "yarn run remove-build",
@@ -20,7 +21,6 @@
   },
   "dependencies": {
     "babel-loader": "^8.2.2",
-    "thread-loader": "^3.0.4",
     "@webpackon/core": "^0.1.0"
   }
 }
