--- a/packages/react-config/package.json
+++ b/packages/react-config/package.json
@@ -4,7 +4,8 @@
   "description": "Webpackon react config",
   "homepage": "https://github.com/AndTem/webpackon/tree/master/packages/react-config#Readme",
   "browser": "src/index.ts",
-  "types": "src/index.ts",
+   "types": "src/index.ts",
+   "main": "lib/index.js",
   "scripts": {
     "remove-build": "rimraf lib/*",
     "prebuild": "yarn run remove-build",
