--- a/packages/modules/typescript/package.json
+++ b/packages/modules/typescript/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "ts-loader": "^9.2.5",
+    "babel-loader": "^8.2.3",
     "@webpackon/core": "^0.1.0",
     "tsconfig-paths-webpack-plugin": "3.5.1"
   }
