--- a/packages/modules/css/package.json
+++ b/packages/modules/css/package.json
@@ -20,6 +20,7 @@
     "release": "yarn run linting && yarn run build && npm publish"
   },
   "dependencies": {
+    "style-loader": "^3.3.1",
     "css-loader": "^6.2.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.1.1",
