--- a/examples/react-config/package.json
+++ b/examples/react-config/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "yarn -v",
     "build:prod": "webpack --mode=production --config webpack.config.js",
-    "dev": "webpack-dev-server --mode=development --config webpack.config.js",
+    "dev": "webpack serve --mode=development",
     "lint:types": "yarn -v"
   },
   "dependencies": {
