--- a/examples/react-config/tsconfig.json
+++ b/examples/react-config/tsconfig.json
@@ -12,6 +12,7 @@
     "target": "ES2019",
     "moduleResolution": "node",
     "resolveJsonModule": true,
+    "sourceMap": true,
     "jsx": "preserve",
     "lib": [
       "dom",
