use-fonts. fix deps example. updated config

--- a/examples/react-config/package.json
+++ b/examples/react-config/package.json
@@ -16,8 +16,7 @@
     "webpack": "^5.58.2",
     "webpack-dev-server": "^4.3.1",
     "webpack-cli": "^4.9.1",
-    "@webpackon/react-config": "*",
-    "@webpackon/base-config": "*",
+    "@webpackon/use-react": "*",
     "@webpackon/core": "*",
     "@webpackon/use-babel": "*",
     "@webpackon/use-typescript": "*",
