--- a/examples/react-config/package.json
+++ b/examples/react-config/package.json
@@ -12,10 +12,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "@types/react": "^17.0.30",
+    "lodash-es": "^4.17.21",
+    "@types/lodash-es": "^4.17.5",
     "@types/react-dom": "^17.0.9",
     "webpack": "^5.58.2",
     "webpack-dev-server": "^4.3.1",
     "webpack-cli": "^4.9.1",
+    "@material-ui/core": "^4.12.3",
     "@webpackon/use-react": "*",
     "@webpackon/core": "*",
     "@webpackon/use-babel": "*",
