--- a/examples/react-config/babel.config.json
+++ b/examples/react-config/babel.config.json
@@ -7,6 +7,10 @@
         "corejs": 3
       }
     ],
+    ["@babel/preset-typescript", {
+      "isTSX": true,
+      "allExtensions": true
+    }],
     [
       "@babel/preset-react",
       {
