--- a/examples/react-config/package.json
+++ b/examples/react-config/package.json
@@ -19,9 +19,16 @@
     "webpack-dev-server": "^4.3.1",
     "webpack-cli": "^4.9.1",
     "@material-ui/core": "^4.12.3",
+    "@babel/preset-typescript": "^7.16.0",
+    "@babel/core": "^7.15.8",
+    "@babel/plugin-transform-async-to-generator": "7.12.1",
+    "@babel/plugin-transform-runtime": "7.12.1",
+    "@babel/preset-env": "7.12.11",
+    "@babel/preset-react": "7.12.10",
     "@webpackon/core": "*",
     "@webpackon/use-babel": "*",
     "@webpackon/use-typescript": "*",
+    "@webpackon/use-ts-loader": "*",
     "@webpackon/use-react-refresh": "*",
     "@webpackon/use-html": "*",
     "@webpackon/use-optimization": "*",
@@ -29,13 +36,5 @@
     "@webpackon/use-fonts": "*",
     "@webpackon/use-url-images": "*",
     "@webpackon/use-dev-server": "*"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "@babel/plugin-transform-async-to-generator": "7.12.1",
-    "@babel/plugin-transform-runtime": "7.12.1",
-    "@babel/preset-env": "7.12.11",
-    "@babel/preset-react": "7.12.10",
-    "@babel/preset-typescript": "^7.15.0"
   }
 }
