--- a/packages/modules/html/package.json
+++ b/packages/modules/html/package.json
@@ -20,6 +20,7 @@
     "release": "yarn run linting && yarn run build && npm publish"
   },
   "dependencies": {
-    "html-webpack-plugin": "5.3.2"
+    "html-webpack-plugin": "5.3.2",
+    "@webpackon/core": "^0.1.0"
   }
 }
