--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
     "module": "commonjs",
     "baseUrl": ".",
     "esModuleInterop": true,
-    "declaration": true
+    "declaration": true,
+    "strict": true,
+    "skipLibCheck": true
   },
 
   "exclude": ["**/lib"]
