--- a/packages/react-refresh/package.json
+++ b/packages/react-refresh/package.json
@@ -2,10 +2,11 @@
   "name": "@webpackon/use-react-refresh",
   "version": "0.1.0",
   "description": "Webpackon use react-refresh",
-  "homepage": "https://github.com/AndTem/webpackon/tree/master/packages/modules/typescript#Readme",
+  "homepage": "https://github.com/AndTem/webpackon/tree/master/packages/react-refresh#Readme",
+  "keywords": ["use react-refresh", "webpackon react-refresh"],
   "browser": "src/index.ts",
-   "types": "src/index.ts",
-   "main": "lib/index.js",
+  "types": "src/index.ts",
+  "main": "lib/index.js",
   "scripts": {
     "remove-build": "rimraf lib/*",
     "prebuild": "yarn run remove-build",
