--- a/packages/babel/package.json
+++ b/packages/babel/package.json
@@ -2,10 +2,11 @@
   "name": "@webpackon/use-babel",
   "version": "0.1.0",
   "description": "Webpackon use babel",
-  "homepage": "https://github.com/AndTem/webpackon/tree/master/packages/modules/babel#Readme",
+  "homepage": "https://github.com/AndTem/webpackon/tree/master/packages/babel#Readme",
+  "keywords": ["use babel", "webpackon babel"],
   "browser": "src/index.ts",
-   "types": "src/index.ts",
-   "main": "lib/index.js",
+  "types": "src/index.ts",
+  "main": "lib/index.js",
   "scripts": {
     "remove-build": "rimraf lib/*",
     "prebuild": "yarn run remove-build",
