--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,8 +4,9 @@
   "description": "Webpackon core",
   "homepage": "https://github.com/AndTem/webpackon/tree/master/packages/core#Readme",
   "browser": "src/index.ts",
-   "types": "src/index.ts",
-   "main": "lib/index.js",
+  "keywords": ["webpackon core"],
+  "types": "src/index.ts",
+  "main": "lib/index.js",
   "scripts": {
     "remove-build": "rimraf lib/*",
     "prebuild": "yarn run remove-build",
