--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -2,10 +2,11 @@
   "name": "@webpackon/use-css",
   "version": "0.1.0",
   "description": "Webpackon use css",
-  "homepage": "https://github.com/AndTem/webpackon/tree/master/packages/modules/css#Readme",
+  "homepage": "https://github.com/AndTem/webpackon/tree/master/packages/css#Readme",
+  "keywords": ["use css", "webpackon css"],
   "browser": "src/index.ts",
-   "types": "src/index.ts",
-   "main": "lib/index.js",
+  "types": "src/index.ts",
+  "main": "lib/index.js",
   "scripts": {
     "remove-build": "rimraf lib/*",
     "prebuild": "yarn run remove-build",
