--- a/packages/fonts/package.json
+++ b/packages/fonts/package.json
@@ -2,10 +2,11 @@
   "name": "@webpackon/use-fonts",
   "version": "0.1.0",
   "description": "Webpackon use fonts",
-  "homepage": "https://github.com/AndTem/webpackon/tree/master/packages/modules/fonts#Readme",
+  "homepage": "https://github.com/AndTem/webpackon/tree/master/packages/fonts#Readme",
+  "keywords": ["use fonts", "webpackon fonts"],
   "browser": "src/index.ts",
-   "types": "src/index.ts",
-   "main": "lib/index.js",
+  "types": "src/index.ts",
+  "main": "lib/index.js",
   "scripts": {
     "remove-build": "rimraf lib/*",
     "prebuild": "yarn run remove-build",
