--- a/packages/html/package.json
+++ b/packages/html/package.json
@@ -2,10 +2,11 @@
   "name": "@webpackon/use-html",
   "version": "0.1.0",
   "description": "Webpackon use html",
-  "homepage": "https://github.com/AndTem/webpackon/tree/master/packages/modules/html#Readme",
+  "homepage": "https://github.com/AndTem/webpackon/tree/master/packages/html#Readme",
+  "keywords": ["use html", "webpackon html"],
   "browser": "src/index.ts",
-   "types": "src/index.ts",
-   "main": "lib/index.js",
+  "types": "src/index.ts",
+  "main": "lib/index.js",
   "scripts": {
     "remove-build": "rimraf lib/*",
     "prebuild": "yarn run remove-build",
