--- a/packages/optimization/package.json
+++ b/packages/optimization/package.json
@@ -2,10 +2,11 @@
   "name": "@webpackon/use-optimization",
   "version": "0.1.0",
   "description": "Webpackon use optimization",
-  "homepage": "https://github.com/AndTem/webpackon/tree/master/packages/modules/optimization#Readme",
+  "homepage": "https://github.com/AndTem/webpackon/tree/master/packages/optimization#Readme",
+  "keywords": ["use optimization", "webpackon optimization"],
   "browser": "src/index.ts",
-   "types": "src/index.ts",
-   "main": "lib/index.js",
+  "types": "src/index.ts",
+  "main": "lib/index.js",
   "scripts": {
     "remove-build": "rimraf lib/*",
     "prebuild": "yarn run remove-build",
