--- a/packages/url-images/package.json
+++ b/packages/url-images/package.json
@@ -2,10 +2,11 @@
   "name": "@webpackon/use-url-images",
   "version": "0.1.0",
   "description": "Webpackon use images",
-  "homepage": "https://github.com/AndTem/webpackon/tree/master/packages/modules/images#Readme",
+  "homepage": "https://github.com/AndTem/webpackon/tree/master/packages/url-images#Readme",
+  "keywords": ["use url images", "use images", "webpackon url-images"],
   "browser": "src/index.ts",
-   "types": "src/index.ts",
-   "main": "lib/index.js",
+  "types": "src/index.ts",
+  "main": "lib/index.js",
   "scripts": {
     "remove-build": "rimraf lib/*",
     "prebuild": "yarn run remove-build",
