--- a/packages/use-ts-loader/package.json
+++ b/packages/use-ts-loader/package.json
@@ -2,10 +2,11 @@
   "name": "@webpackon/use-ts-loader",
   "version": "0.1.0",
   "description": "Webpackon use ts loader",
-  "homepage": "https://github.com/AndTem/webpackon/tree/master/packages/modules/typescript#Readme",
+  "homepage": "https://github.com/AndTem/webpackon/tree/master/packages/use-ts-loader#Readme",
+  "keywords": ["use ts-loader", "webpackon ts-loader"],
   "browser": "src/index.ts",
-   "types": "src/index.ts",
-   "main": "lib/index.js",
+  "types": "src/index.ts",
+  "main": "lib/index.js",
   "scripts": {
     "remove-build": "rimraf lib/*",
     "prebuild": "yarn run remove-build",
@@ -22,7 +23,7 @@
   "dependencies": {
     "ts-loader": "^9.2.5",
     "@webpackon/core": "^0.1.0",
-    "@webpackon/use-typescript": "^0.1.0"
+    "@webpackon/use-ts": "^0.1.0"
   },
   "peerDependencies": {
     "webpack": "5.x.x"
