--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -27,12 +27,12 @@
     "postcss-loader": "^6.1.1",
     "autoprefixer": "^10.3.1",
     "mini-css-extract-plugin": "^2.4.4",
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "css-minimizer-webpack-plugin": "^3.2.0",
     "@webpackon/core": "^0.1.0"
   },
   "devDependencies": {
     "@types/mini-css-extract-plugin": "2.4.0",
     "@types/postcss-flexbugs-fixes": "4.2.1",
-    "@types/optimize-css-assets-webpack-plugin": "5.0.4"
+    "@types/css-minimizer-webpack-plugin": "^3.2.1"
   }
 }
