--- a/examples/react-swc/package.json
+++ b/examples/react-swc/package.json
@@ -9,6 +9,7 @@
     "lint:types": "yarn -v"
   },
   "dependencies": {
+    "@swc/core": "^1.2.117",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "@types/react": "^17.0.30",
