--- a/examples/react-swc/.swcrc
+++ b/examples/react-swc/.swcrc
@@ -6,8 +6,7 @@
   "jsc": {
     "parser": {
       "syntax": "typescript",
-      "tsx": true,
-      "decorators": true
+      "tsx": true
     },
     "transform": {
       "react": { "runtime": "automatic" }
