--- a/examples/react-babel/package.json
+++ b/examples/react-babel/package.json
@@ -6,7 +6,8 @@
     "build": "yarn -v",
     "build:prod": "webpack --mode=production --config webpack.config.js",
     "dev": "webpack serve --mode=development",
-    "lint:types": "yarn -v"
+    "lint:types": "yarn -v",
+    "release": "yarn -v"
   },
   "dependencies": {
     "react": "^17.0.2",
