--- a/packages/commands/package.json
+++ b/packages/commands/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "build": "yarn -v",
-    "lint:types": "yarn -v"
+    "lint:types": "yarn -v",
+    "release": "yarn -v"
   },
   "dependencies": {
     "recursive-copy": "^2.0.10",
