--- a/examples/react-babel/package.json
+++ b/examples/react-babel/package.json
@@ -10,6 +10,7 @@
     "release": "yarn -v"
   },
   "dependencies": {
+    "@webpackon/example-package": "*",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "@types/react": "^17.0.30",
@@ -36,6 +37,7 @@
     "@webpackon/use-css": "*",
     "@webpackon/use-fonts": "*",
     "@webpackon/use-url-images": "*",
-    "@webpackon/use-dev-server": "*"
+    "@webpackon/use-dev-server": "*",
+    "@webpackon/use-transpile-modules": "*"
   }
 }
